feat check-access
